# streamd

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  room.rs  route_optimisation.rs
static/: index.html  landing.html  landing.js  main.js  streaming.html  streaming.js
temp/DemoFrontEnd/: index.html
temp/DemoFrontEnd/css/: main.css
temp/DemoFrontEnd/js/: main.js
