[package]
name = "stream_dream"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }
tokio-stream = "0.1"
warp = "0.3"
rand = "0.8"
futures = "0.3"
lazy_static = "1.4"
serde_json = "1.0"